--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.koushikdutta.ion:ion:3.0.8'
+    //implementation 'com.koushikdutta.ion:ion:2.1.8'
 
 }
